# MitiruEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile
.github/workflows/: ci.yml
include/mitiru/: Mitiru.hpp
include/mitiru/ai/: AISystem.hpp  AiDebugger.hpp  AiPipeline.hpp  AiSession.hpp  AiTestRunner.hpp  BehaviorBridge.hpp  PathfindingBridge.hpp
include/mitiru/asset/: AssetPipeline.hpp  AssetRegistry.hpp  GameAssetTemplates.hpp  MeshCache.hpp  SvgBuilder.hpp  SvgGenerator.hpp  UiThemeGenerator.hpp
include/mitiru/audio/: AudioEngine.hpp  AudioMixer.hpp  MitiruAudioPlayer.hpp  NullAudioEngine.hpp  SoftAudioEngine.hpp  WaveAudioEngine.hpp  Win32AudioOutput.hpp
include/mitiru/bridge/: AiBridge.hpp  AnimationBridge.hpp  DebugDrawBridge.hpp  DialogueBridge.hpp  EventBridge.hpp  I18nBridge.hpp  ParticleBridge.hpp  PhysicsBridge.hpp  ProceduralBridge.hpp  SaveBridge.hpp  SgcBridge.hpp  SteeringBridge.hpp  TilemapBridge.hpp  TransitionBridge.hpp  UiBridge.hpp  VNBridge.hpp
include/mitiru/control/: ActionExecutor.hpp  CommandQueue.hpp  CommandSchema.hpp  ReplaySystem.hpp  Scripting.hpp
include/mitiru/core/: Clock.hpp  Config.hpp  Engine.hpp  FrameTimer.hpp  Game.hpp  GameLoop.hpp  MitiruApp.hpp  Screen.hpp  ServiceRegistry.hpp
include/mitiru/data/: ConfigManager.hpp  JsonBuilder.hpp  PrefabSystem.hpp  ProjectFile.hpp  SchemaValidator.hpp  TilemapLoader.hpp
include/mitiru/debug/: DebugPanel.hpp  GpuProfiler.hpp  IDebugOverlay.hpp  ImGuiOverlay.hpp  NullDebugOverlay.hpp  ProfilerOverlay.hpp
include/mitiru/ecs/: ComponentRegistry.hpp  MitiruWorld.hpp  Prefab.hpp  SystemScheduler.hpp
include/mitiru/editor/: AssetBrowser.hpp  EntityInspector.hpp  SceneView.hpp
include/mitiru/gfx/: GfxFactory.hpp  GfxTypes.hpp  IBuffer.hpp  ICommandList.hpp  IDescriptorHeap.hpp  IDevice.hpp  IGpuFence.hpp  IPipeline.hpp  IRenderTarget.hpp  IShader.hpp  ISwapChain.hpp  ITexture.hpp
include/mitiru/graphwalker/: AchievementSystem.hpp  BgmManager.hpp  CalculatorHUD.hpp  Common.hpp  Effects.hpp  FormulaManager.hpp  FormulaSystem.hpp  GameApp.hpp  GameObject.hpp  GlossaryData.hpp  GraphArea.hpp  Hazards.hpp  InputManager.hpp  Interactables.hpp  MinimapData.hpp  ObjectFactory.hpp  PhysicsIntegration.hpp  Platforms.hpp  Player.hpp  SaveData.hpp  TutorialManager.hpp  WorldManager.hpp  WorldMap.hpp  Zone.hpp
include/mitiru/imgui/: ImGuiBackend.hpp
include/mitiru/input/: GamepadInput.hpp  InputInjector.hpp  InputMapper.hpp  InputRecorder.hpp  InputReplayer.hpp  InputState.hpp  KeyCode.hpp  Win32Input.hpp
include/mitiru/network/: INetworkTransport.hpp  Lobby.hpp  LocalTransport.hpp  NetworkTypes.hpp  StateSync.hpp  TcpTransport.hpp
include/mitiru/observe/: DiffTracker.hpp  HttpServer.hpp  Inspector.hpp  ObserveRouter.hpp  ObserveServer.hpp  QueryParser.hpp  SemanticLabel.hpp  Snapshot.hpp  SnapshotSchema.hpp
include/mitiru/physics/: CollisionBridge.hpp  PhysicsBridge.hpp  PhysicsSystem.hpp
include/mitiru/platform/: IPlatform.hpp  IWindow.hpp  PlatformInfo.hpp  WindowFactory.hpp
include/mitiru/render/: BitmapFont.hpp  Camera2D.hpp  Camera3D.hpp  DefaultShaders.hpp  DefaultShaders3D.hpp  DxTextRenderer.hpp  FontRenderer.hpp  Light.hpp  Material.hpp  Mesh.hpp  ObjLoader.hpp  Pipeline3D.hpp  RenderGraph.hpp  RenderPipeline2D.hpp  RenderState3D.hpp  Renderer2D.hpp  Renderer2DBridge.hpp  Renderer3D.hpp  Scene3D.hpp  ScreenCapture.hpp  ShapeRenderer.hpp  SpriteBatch.hpp  TextRenderer.hpp  Vertex2D.hpp  Vertex3D.hpp
include/mitiru/resource/: AssetHandle.hpp  AssetManager.hpp  FontLoader.hpp  HotReloadManager.hpp  IAssetLoader.hpp  (+1 more)
tests/: CMakeLists.txt
tests/mitiru/: CatchStringViewSupport.hpp  TestAIBridge.cpp  TestAssetBrowser.cpp  TestAssetRegistry.cpp  TestAsteroidGame.cpp  TestAudioMixer.cpp  TestAudioResource.cpp  TestBridges.cpp  TestCamera3D.cpp  TestControl.cpp  TestDataDriven.cpp  TestDebugOverlay.cpp  TestDx12Config.cpp  TestEcs.cpp  TestEntityInspector.cpp  TestFrameTimer.cpp  TestGWCore.cpp  TestGWFormula.cpp  TestGWGame.cpp  TestGWManagers.cpp  TestGWObjects.cpp  TestGameLoop.cpp  TestGameWorld.cpp  TestGamepadConfig.cpp  TestGfx.cpp  TestGlfwConfig.cpp  TestGpuProfiler.cpp  TestImGuiBackend.cpp  TestInput.cpp  TestInputMapper.cpp  TestMeshCache.cpp  TestMitiruApp.cpp  TestMitiruEngine.cpp  TestNetwork.cpp  TestObjLoader.cpp  TestObserve.cpp  TestPhysicsBridge.cpp  TestPlatformInfo.cpp  TestProfilerOverlay.cpp  TestRender.cpp  (+19 more)
tools/: mitiru-cli.py  mitiru-example.cpp
(+54 files in other folders)
